package com.hqbhoho.bigdata.design.pattern.flyweight;

public interface ChessFlyWeight {
    void display(Geo geo);
}
